--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pandas==2.2.0
-plotly==5.10.0
-streamlit==1.12.2
-openpyxl==3.0.10
-XlsxWriter==3.0.3
+pandas>=2.2.0
+plotly>=5.10.0
+streamlit>=1.36.0
+openpyxl>=3.1.0
+XlsxWriter>=3.2.0
